Overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
